--- a/tweetdeck-layout/src/index.html
+++ b/tweetdeck-layout/src/index.html
@@ -8,6 +8,202 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>tweetdeck</h1>
+    <div class="grid">
+      <div class="controls">
+        <div class="controls__top">
+          <button>+</button>
+          <button>=</button>
+        </div>
+        <div class="controls__bottom">
+          <button>00</button>
+        </div>
+      </div>
+      <header class="col-header">
+        <h3>Col Header</h3>
+      </header>
+      <section class="col">
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+      </section>
+      <header class="col-header">
+        <h3>Col Header</h3>
+      </header>
+      <section class="col">
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+        <div class="tweet">
+          <img src="http://via.placeholder.com/50x50" />
+          <p>
+            The next What Is? Video is going to be What Is ES6? Trying out some
+            new style on this video, excited to see how it turns out.
+          </p>
+          <div class="tweet__icons">
+            <button>+</button>
+            <button>-</button>
+            <button>0</button>
+          </div>
+        </div>
+      </section>
+      <header class="col-header">
+        <h3>Col Header</h3>
+      </header>
+      <section class="col"></section>
+      <header class="col-header">
+        <h3>Col Header</h3>
+      </header>
+      <section class="col"></section>
+    </div>
   </body>
 </html>
