--- a/instagram-layout/src/index.html
+++ b/instagram-layout/src/index.html
@@ -35,9 +35,10 @@
           <span>57 following</span>
         </div>
         <p>
-          Level Up Tutorials 1000+ free web development and design tutorials
-          created by @stolinski https://www.youtube.com/user/LevelUpTuts
-          leveluptutorials.com
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
+          molestiae alias reprehenderit asperiores et ipsam beatae vitae ex
+          laborum aspernatur minima dolorem in excepturi voluptatem veritatis
+          consequatur pariatur maiores molestias!
         </p>
       </section>
       <div class="feed-nav">
